--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -19,8 +19,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="FolderList"
-            android:id="@+id/textView"
+            android:id="@+id/title"
             android:layout_weight="1" />
 
         <Button
