--- a/app/src/main/res/layout/item_folder_entry.xml
+++ b/app/src/main/res/layout/item_folder_entry.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.namsan.scanvoca.list.CheckableLinearLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
@@ -37,4 +37,4 @@
             android:id="@+id/text_count"/>
     </LinearLayout>
 
-</com.example.namsan.scanvoca.list.CheckableLinearLayout>
+</LinearLayout>
