--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -45,4 +45,11 @@
             android:text="모르겠어"
             android:id="@+id/btn_fail" />
     </LinearLayout>
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="168dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/memory_bar" />
+
 </LinearLayout>
