--- a/app/src/main/res/layout/item_word_entry.xml
+++ b/app/src/main/res/layout/item_word_entry.xml
@@ -16,8 +16,9 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,5 +36,12 @@
             android:textColor="#000000"
             android:id="@+id/text_word" />
     </LinearLayout>
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progress_memory"
+        android:progress="50" />
 
 </LinearLayout>
